// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`point.sql > line 6 1`] = `
[
  "SET extra_float_digits = 0",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {},
                  "location": 25,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "extra_float_digits",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 13 1`] = `
[
  "INSERT INTO POINT_TBL(f1) VALUES ('(10.0 10.0)')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 22,
                  "name": "f1",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "point_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 34,
                            "sval": {
                              "sval": "(10.0 10.0)",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 19 1`] = `
[
  "	-- Out of range


SELECT * FROM POINT_TBL",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 33,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 26,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 26,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 25 1`] = `
[
  "SELECT p.* FROM POINT_TBL p WHERE p.f1 << '(0.0, 0.0)'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 39,
                "name": [
                  {
                    "String": {
                      "sval": "<<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 42,
                    "sval": {
                      "sval": "(0.0, 0.0)",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 28 1`] = `
[
  "SELECT p.* FROM POINT_TBL p WHERE '(0.0,0.0)' >> p.f1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "A_Const": {
                    "location": 34,
                    "sval": {
                      "sval": "(0.0,0.0)",
                    },
                  },
                },
                "location": 46,
                "name": [
                  {
                    "String": {
                      "sval": ">>",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 49,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 31 1`] = `
[
  "SELECT p.* FROM POINT_TBL p WHERE '(0.0,0.0)' |>> p.f1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "A_Const": {
                    "location": 34,
                    "sval": {
                      "sval": "(0.0,0.0)",
                    },
                  },
                },
                "location": 46,
                "name": [
                  {
                    "String": {
                      "sval": "|>>",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 50,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 34 1`] = `
[
  "SELECT p.* FROM POINT_TBL p WHERE p.f1 <<| '(0.0, 0.0)'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 39,
                "name": [
                  {
                    "String": {
                      "sval": "<<|",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 43,
                    "sval": {
                      "sval": "(0.0, 0.0)",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 37 1`] = `
[
  "SELECT p.* FROM POINT_TBL p WHERE p.f1 ~= '(5.1, 34.5)'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 39,
                "name": [
                  {
                    "String": {
                      "sval": "~=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 42,
                    "sval": {
                      "sval": "(5.1, 34.5)",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 40 1`] = `
[
  "SELECT p.* FROM POINT_TBL p
   WHERE p.f1 <@ box '(0,0,100,100)'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 37,
                  },
                },
                "location": 42,
                "name": [
                  {
                    "String": {
                      "sval": "<@",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 49,
                        "sval": {
                          "sval": "(0,0,100,100)",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 45,
                      "names": [
                        {
                          "String": {
                            "sval": "box",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 43 1`] = `
[
  "SELECT p.* FROM POINT_TBL p
   WHERE box '(0,0,100,100)' @> p.f1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 41,
                        "sval": {
                          "sval": "(0,0,100,100)",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 37,
                      "names": [
                        {
                          "String": {
                            "sval": "box",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
                "location": 57,
                "name": [
                  {
                    "String": {
                      "sval": "@>",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 60,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 46 1`] = `
[
  "SELECT p.* FROM POINT_TBL p
   WHERE not p.f1 <@ box '(0,0,100,100)'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 41,
                        },
                      },
                      "location": 46,
                      "name": [
                        {
                          "String": {
                            "sval": "<@",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 53,
                              "sval": {
                                "sval": "(0,0,100,100)",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 49,
                            "names": [
                              {
                                "String": {
                                  "sval": "box",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                ],
                "boolop": "NOT_EXPR",
                "location": 37,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 52 1`] = `
[
  "SELECT p.* FROM POINT_TBL p
   WHERE not box '(0,0,100,100)' @> p.f1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 45,
                              "sval": {
                                "sval": "(0,0,100,100)",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 41,
                            "names": [
                              {
                                "String": {
                                  "sval": "box",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 61,
                      "name": [
                        {
                          "String": {
                            "sval": "@>",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 64,
                        },
                      },
                    },
                  },
                ],
                "boolop": "NOT_EXPR",
                "location": 37,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 55 1`] = `
[
  "SELECT p.f1, p.f1 <-> point '(0,0)' AS dist
   FROM POINT_TBL p
   ORDER BY dist",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p",
                  },
                  "inh": true,
                  "location": 52,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "dist",
                          },
                        },
                      ],
                      "location": 76,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "name": "dist",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                      "location": 18,
                      "name": [
                        {
                          "String": {
                            "sval": "<->",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 28,
                              "sval": {
                                "sval": "(0,0)",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 22,
                            "names": [
                              {
                                "String": {
                                  "sval": "point",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 59 1`] = `
[
  "SELECT p1.f1 AS point1, p2.f1 AS point2, p1.f1 <-> p2.f1 AS dist
   FROM POINT_TBL p1, POINT_TBL p2
   ORDER BY dist, p1.f1[0], p2.f1[0]",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p1",
                  },
                  "inh": true,
                  "location": 73,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p2",
                  },
                  "inh": true,
                  "location": 87,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "dist",
                          },
                        },
                      ],
                      "location": 112,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Indirection": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p1",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 118,
                        },
                      },
                      "indirection": [
                        {
                          "A_Indices": {
                            "uidx": {
                              "A_Const": {
                                "ival": {},
                                "location": 124,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Indirection": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p2",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 128,
                        },
                      },
                      "indirection": [
                        {
                          "A_Indices": {
                            "uidx": {
                              "A_Const": {
                                "ival": {},
                                "location": 134,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "point1",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p1",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 24,
                  "name": "point2",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p2",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 24,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 41,
                  "name": "dist",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p1",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 41,
                        },
                      },
                      "location": 47,
                      "name": [
                        {
                          "String": {
                            "sval": "<->",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p2",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 51,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 63 1`] = `
[
  "SELECT p1.f1 AS point1, p2.f1 AS point2
   FROM POINT_TBL p1, POINT_TBL p2
   WHERE (p1.f1 <-> p2.f1) > 3",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p1",
                  },
                  "inh": true,
                  "location": 48,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p2",
                  },
                  "inh": true,
                  "location": 62,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "point1",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p1",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 24,
                  "name": "point2",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p2",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 24,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p1",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 85,
                      },
                    },
                    "location": 91,
                    "name": [
                      {
                        "String": {
                          "sval": "<->",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p2",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 95,
                      },
                    },
                  },
                },
                "location": 102,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 3,
                    },
                    "location": 104,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 68 1`] = `
[
  "SELECT p1.f1 AS point1, p2.f1 AS point2, (p1.f1 <-> p2.f1) AS distance
   FROM POINT_TBL p1, POINT_TBL p2
   WHERE (p1.f1 <-> p2.f1) > 3 and p1.f1 << p2.f1
   ORDER BY distance, p1.f1[0], p2.f1[0]",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p1",
                  },
                  "inh": true,
                  "location": 79,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p2",
                  },
                  "inh": true,
                  "location": 93,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "distance",
                          },
                        },
                      ],
                      "location": 168,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Indirection": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p1",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 178,
                        },
                      },
                      "indirection": [
                        {
                          "A_Indices": {
                            "uidx": {
                              "A_Const": {
                                "ival": {},
                                "location": 184,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Indirection": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p2",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 188,
                        },
                      },
                      "indirection": [
                        {
                          "A_Indices": {
                            "uidx": {
                              "A_Const": {
                                "ival": {},
                                "location": 194,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "point1",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p1",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 24,
                  "name": "point2",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p2",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 24,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 41,
                  "name": "distance",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p1",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 42,
                        },
                      },
                      "location": 48,
                      "name": [
                        {
                          "String": {
                            "sval": "<->",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p2",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 52,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "p1",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "f1",
                                  },
                                },
                              ],
                              "location": 116,
                            },
                          },
                          "location": 122,
                          "name": [
                            {
                              "String": {
                                "sval": "<->",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "p2",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "f1",
                                  },
                                },
                              ],
                              "location": 126,
                            },
                          },
                        },
                      },
                      "location": 133,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 135,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p1",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 141,
                        },
                      },
                      "location": 147,
                      "name": [
                        {
                          "String": {
                            "sval": "<<",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p2",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 150,
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 137,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 74 1`] = `
[
  "SELECT p1.f1 AS point1, p2.f1 AS point2, (p1.f1 <-> p2.f1) AS distance
   FROM POINT_TBL p1, POINT_TBL p2
   WHERE (p1.f1 <-> p2.f1) > 3 and p1.f1 << p2.f1 and p1.f1 |>> p2.f1
   ORDER BY distance",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p1",
                  },
                  "inh": true,
                  "location": 79,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p2",
                  },
                  "inh": true,
                  "location": 93,
                  "relname": "point_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "distance",
                          },
                        },
                      ],
                      "location": 188,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "point1",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p1",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 24,
                  "name": "point2",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p2",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 24,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 41,
                  "name": "distance",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p1",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 42,
                        },
                      },
                      "location": 48,
                      "name": [
                        {
                          "String": {
                            "sval": "<->",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p2",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 52,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "p1",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "f1",
                                  },
                                },
                              ],
                              "location": 116,
                            },
                          },
                          "location": 122,
                          "name": [
                            {
                              "String": {
                                "sval": "<->",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "p2",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "f1",
                                  },
                                },
                              ],
                              "location": 126,
                            },
                          },
                        },
                      },
                      "location": 133,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 135,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p1",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 141,
                        },
                      },
                      "location": 147,
                      "name": [
                        {
                          "String": {
                            "sval": "<<",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p2",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 150,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p1",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 160,
                        },
                      },
                      "location": 166,
                      "name": [
                        {
                          "String": {
                            "sval": "|>>",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p2",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 170,
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 137,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 80 1`] = `
[
  "CREATE TEMP TABLE point_gist_tbl(f1 point)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "point_gist_tbl",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "point",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`point.sql > line 101 1`] = `
[
  "SELECT pg_input_is_valid('1,y', 'point')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 25,
                            "sval": {
                              "sval": "1,y",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 32,
                            "sval": {
                              "sval": "point",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_input_is_valid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
